--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
                 </div>
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-4 col-sm-offset-4">
+                        <div class="col-sm-4 col-sm-offset-4 text-center">
                             <button class="btn btn-lg text-center hvr-shutter-out-horizontal "> learn more</button>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-1 col-sm-offset-5">
+                        <div class="col-sm-1 col-sm-offset-5 text-center">
                             <button class="btn btn-lg second"><i class="fas fa-angle-double-down fa-2x"></i></button>
                         </div>
                     </div>
@@ -99,7 +99,7 @@
                 <div class="for-button">
                     <div class="row">
                         <div class="col-xs-12 text-center">
-                            <button class="btn btn-lg btn-warning">
+                            <button class="btn btn-lg btn-warning hvr-shutter-in-vertical">
                                 Read More
                             </button>
                         </div>
@@ -159,7 +159,7 @@
                         <div class="row">
                             <div class=" col-xs-12">
                                 <p class="lead">
-                                    Daien Projects Management & Construction Team is staffed by licensed and experienced Architects and Engineers in the construction industry whose experience in managing complex construction projects involving multiple bid packages.<br>
+                                    Daien Projects Management &amp; Construction Team is staffed by licensed and experienced Architects and Engineers in the construction industry whose experience in managing complex construction projects involving multiple bid packages.<br>
                                     Our primary responsibility is to ensure that our clients receive a final product constructed on time and within budget and that the final construction fully supports the stated needs and objectives of the owner.<br>
                                     To this end Daien employs a systematic process which uses various controls and procedures intended to allow the design consultant maximum creativity within the budgetary constraints and programmatic objectives.<br>
                                     The climate during construction is one that creates a sense of purpose on the part of the contractor which ensures the commitment of the contractors highest level of attention and resources.The most important service Daien’s performs for its clients during the construction process is to ensure that the construction is in full conformance with the contract documents.<br>
@@ -198,7 +198,7 @@
                         <div class="row">
                             <div class="col-md-6 col-sm-12">
                                 <h2>WE BUILD PROFESSIONAL AND SMART BUILDINGS</h2>
-                                <button class="btn btn-lg btn-success">Read more</button>
+                                <button class="btn btn-lg btn-success hvr-shutter-out-horizontal">Read more</button>
                             </div>
                             <div class="col-md-6 col-sm-12">
                                 <div class="skillsprogress">
@@ -305,16 +305,16 @@
                     <h1>OUR CLIENTS</h1>
                
                     <div class="row">
-                        <div class="col-md-3 col-sm-6 col-xs-12">
+                        <div class="col-md-3 col-sm-6 col-xs-6">
                             <a href="https://www.islam.gov.qa/" target="_blank"><img class="img-responsive " src="https://static.wixstatic.com/media/fca67a_b36d3508f66d426bb3bc4eddbb8aaa71~mv2.png/v1/fill/w_200,h_100,al_c,q_80,usm_0.66_1.00_0.01/fca67a_b36d3508f66d426bb3bc4eddbb8aaa71~mv2.webp"></a>
                         </div>
-                        <div class="col-md-3 col-sm-6 col-xs-12">
+                        <div class="col-md-3 col-sm-6 col-xs-6">
                             <a href="http://www.chocolatecoffee.net/" target="_blank"><img  class="img-responsive "src="https://static.wixstatic.com/media/fca67a_a792263985b4406f8f8992e579491e42~mv2.png/v1/fill/w_135,h_128,al_c,q_80,usm_0.66_1.00_0.01/fca67a_a792263985b4406f8f8992e579491e42~mv2.webp" style="width: 135px; height: 138px; object-fit: contain;"></a>
                         </div>
-                        <div class="col-md-3 col-sm-6 col-xs-12">
+                        <div class="col-md-3 col-sm-6 col-xs-6">
                             <a href="" target="_parent"><img  class="img-responsive icon"src="https://static.wixstatic.com/media/fca67a_d22bc7ef0c9a4702906bff78548d1cd7~mv2.png/v1/fill/w_115,h_155,al_c,q_80,usm_0.66_1.00_0.01/fca67a_d22bc7ef0c9a4702906bff78548d1cd7~mv2.webp"></a>
                         </div>
-                        <div class="col-md-3 col-sm-6 col-xs-12">
+                        <div class="col-md-3 col-sm-6 col-xs-6">
                             <a href="http://www.trustelectro.com/" target="_blank"><img class="img-responsive trust"src="https://static.wixstatic.com/media/fca67a_8b1b8aad9a8340da90c35c11c41a4ed3~mv2.png/v1/fill/w_210,h_85,al_c,q_80,usm_0.66_1.00_0.01/fca67a_8b1b8aad9a8340da90c35c11c41a4ed3~mv2.webp" style="width: 210px; height: 216px; object-fit: contain;"></a>
                         </div>
                     </div>
@@ -372,11 +372,63 @@
                             <span>October 2, 2017</span>
                         </div>
                     </div>
-                    <div class="col-md-6 col-xs-12"></div>
+                    <div class="col-md-6 col-xs-12">
+                       <div id="second" class="carousel slide" data-ride="carousel">
+                          <!-- Indicators -->
+                          <ol class="carousel-indicators">
+                            <li data-target="#second" data-slide-to="0" class="active"></li>
+                            <li data-target="#second" data-slide-to="1"></li>
+                            <li data-target="#second" data-slide-to="2"></li>
+                          </ol>
+
+                          <!-- Wrapper for slides -->
+                          <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                              <img src="https://static.wixstatic.com/media/fca67a_a6348a68705c4fbba13904df82fa512a~mv2.jpeg/v1/fill/w_365,h_293,al_c,q_80,usm_0.66_1.00_0.01/fca67a_a6348a68705c4fbba13904df82fa512a~mv2.webp" alt="...">
+                              <div class="carousel-caption">
+                                <div class="box">
+                                    <a>Awqaf - Opening Ceremony</a>
+                                    <span>June 14, 2018</span>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="item">
+                              <img src="https://static.wixstatic.com/media/fca67a_4c94ac4933b846ec86395dc7ecd52627~mv2_d_4284_3324_s_4_2.jpg/v1/fill/w_365,h_293,al_c,q_80,usm_0.66_1.00_0.01/fca67a_4c94ac4933b846ec86395dc7ecd52627~mv2_d_4284_3324_s_4_2.webp" alt="...">
+                              <div class="carousel-caption">
+                                 <div class="box">
+                                    <a>Annual Awards Celebration - 2017</a>
+                                    <span>December 26, 2017</span>
+                                </div>
+                              </div>
+                            </div>
+                              <div class="item">
+                              <img src="https://static.wixstatic.com/media/fca67a_14e7bd22b8d541c0926f025824242d5d~mv2.jpg/v1/fill/w_365,h_293,al_c,q_80,usm_0.66_1.00_0.01/fca67a_14e7bd22b8d541c0926f025824242d5d~mv2.webp" alt="...">
+                              <div class="carousel-caption">
+                                   <div class="box">
+                                    <a>National Day 2017</a>
+                                    <span>December 18, 2017</span>
+                                </div>
+                              </div>
+                            </div>
+
+
+                          </div>
+
+                          <!-- Controls -->
+                          <a class="left carousel-control" href="#second" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                          </a>
+                          <a class="right carousel-control" href="#second" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                          </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-12 text-center">
-                        <a href="" target="_blank"></a><button class="btn btn-lg btn-warning">More news</button>
+                        <a href="" target="_blank"></a><button class="btn btn-lg btn-warning" style="margin-top: 50px;">More news</button>
                     </div>
                 </div>    
             </div>    
@@ -388,7 +440,7 @@
             </div>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-xs-12">
+                    <div class="col-xs-12" style="padding:0px; ">
                         <div class="map" id="map" style="width: 100%; height: 600px;">
                         </div>
                     </div>
@@ -404,28 +456,28 @@
                                 <form role="form">
                                     <div class="col-md-6 " syle="padding:0px;">
                                         <div class="form-group">
-                                            <input type="text" class="form-control input-lg" placeholder="Name*" style="width:100%">
+                                            <input type="text" class="form-control input-lg" placeholder="Name *" style="width:100%">
                                         </div>
                                         
                                     </div>
                                     <div class="col-md-6"  syle="padding:0px;">
                                         <div class="form-group">
-                                            <input type="text" class="form-control input-lg" placeholder="E-mail*" style="width:100%">
+                                            <input type="text" class="form-control input-lg" placeholder="E-mail *" style="width:100%" required>
                                         </div>
                                     </div>
                                     <div class="col-xs-12">
                                         <div class="form-group">
-                                            <input type="text" class="form-control input-lg" placeholder="Subject">
+                                            <input type="text" class="form-control input-lg" placeholder="Subject" required>
                                         </div>
                                     </div>
                                     <div class="col-xs-12">
                                         <div class="form-group">
-                                            <input type="text" class="form-control input-lg" placeholder="Phone">
+                                            <input type="text" class="form-control input-lg" placeholder="Phone" required>
                                         </div>
                                     </div>
                                     <div class="col-xs-12">
                                         <div class="form-group">
-                                            <textarea class="form-control input-lg" placeholder="You Message"></textarea>
+                                            <textarea class="form-control input-lg" placeholder="You Message" required></textarea>
                                         </div>
                                     </div>
                                     <div class="col-xs-12">
@@ -435,10 +487,62 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-md-6"></div>
+                    <div class="col-xs-12 col-md-6">
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="box3">
+                                    <h2>Head Office</h2>
+                                    <p class="lead">Al Reem Tower, Dafna, Doha - Qatar6 th Floor, Office No: 25</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12">
+                                <div class="box4">
+                                    <p class="lead">phone: <span>+974 4441 1919</span></p>
+                                    <p class="lead">Fax: <span>+974 4441 1929</span></p>
+                                    <a>www.daienconstruction.com</a>
+                                </div>
+                            </div>
+                            <div class="col-xs-12">
+                                <div class="box5">
+                                    <h2>Employment</h2>
+                                    <p class="lead">
+                                        To apply for a job with Daien Constructions, please send a cover letter together with your C.V. to: <span>admin@daiengroup.com</span>
+                                    </p>
+                                    <span class="border"></span>
+                                </div>    
+                            </div>
+                            <div class="col-xs-12">
+                                <div class="box6">
+                                    <p>Get a quote: +974- 4441- 1919</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>    
                 </div>
             </div>
         </section>
+        <!--end section contact-->
+        <!--start section footer-->
+        <section class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 text-center">
+                        <a href=""target="_blank"><span><i class="fab fa-facebook-square fa-3x"></i></span></a>
+                        <a href=""target="_blank"><span><i class="fab fa-linkedin fa-3x"></i></span></a>
+                        <a href=""target="_blank"><span><i class="fab fa-google-plus-square fa-3x"></i></span></a>
+                    </div>
+                    <div class="col-xs-12 text-center">
+                        <span class="last">&copy; 2018 Sayed Hesham</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--end section footer-->
+        <!--start section overlay-->
+        <section class="overlay">
+            <div class="spinner"></div>
+        </section>
+        <!--end section overlay-->
         <script
         src="https://code.jquery.com/jquery-2.2.4.js"
         integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
@@ -447,10 +551,6 @@
         <script src="js/project.js"></script>
         <script src="js/owl.carousel.min.js"></script>
        <script src="js/wow.min.js"></script>
-        <script>
-              new WOW().init();
-              </script>
-        <script src="js/jquery.nicescroll.min.js"></script>
         <script>
             $(document).ready(function(){
                   $(".owl-carousel").owlCarousel({
@@ -478,6 +578,11 @@
                   });
                 });
         </script>
+
+        <script>
+              new WOW().init();
+              </script>
+        <script src="js/jquery.nicescroll.min.js"></script>
         <script src ="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
     </body>
 </html>
