--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">SERVICES</a></li>
-                    <li><a href="#">About US</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="services.html">SERVICES</a></li>
+                    <li><a href="about-us.html">About US</a></li>
                     <li><a href="#">Projects</a></li>
-                    <li><a href="#">NEW &amp; UPDATES</a></li>
+                    <li><a href="news%20and%20updates.html">NEW &amp; UPDATES</a></li>
                     <li><a href="#">CONTACT</a></li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
