--- a/project.html
+++ b/project.html
@@ -35,7 +35,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="services.html">SERVICES</a></li>
                     <li><a href="about-us.html">About US</a></li>
-                    <li><a href="index.html#project">Projects</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="news%20and%20updates.html">NEW &amp; UPDATES</a></li>
                     <li><a href="index.html#contact" >CONTACT</a></li>
                   </ul>
@@ -106,7 +106,7 @@
                                 </div>
                             </div>
                             <div class="col-xs-12">
-                               <h2> Project Name: Villa (B+G+P.H) + Outside Majlis.</h2>
+                                <h2> Project Name: <span>Villa (B+G+P.H) + Outside Majlis.</span></h2>
                             </div>
                             <div class="col-xs-12">
                                 <div class="box2">
@@ -117,7 +117,7 @@
                                 </div>
                             </div>
                             <div class="col-xs-12">
-                                <a href="index.html#project"><button class="btn btn-lg"> Back to projects</button></a>
+                                <a href="projects.html"><button class="btn btn-lg"> Back to projects</button></a>
                             </div>
                         </div>
                     </div>
