--- a/about-us.html
+++ b/about-us.html
@@ -34,8 +34,8 @@
                   <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html" >HOME</a></li>
                     <li><a href="services.html">SERVICES</a></li>
-                    <li><a href="about-us.html">About US</a></li>
-                    <li><a href="index.html#project">Projects</a></li>
+                    <li><a href="#">About US</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="news%20and%20updates.html">NEW &amp; UPDATES</a></li>
                     <li><a href="index.html#contact">CONTACT</a></li>
                   </ul>
