--- a/news and updates.html
+++ b/news and updates.html
@@ -36,8 +36,8 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="services.html">SERVICES</a></li>
                     <li><a href="about-us.html">About US</a></li>
-                    <li><a href="index.html#project">Projects</a></li>
-                    <li><a href="news%20and%20updates.html">NEW &amp; UPDATES</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="#">NEW &amp; UPDATES</a></li>
                     <li><a href="index.html#contact">CONTACT</a></li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
