--- a/services.html
+++ b/services.html
@@ -33,9 +33,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="services.html">SERVICES</a></li>
+                    <li><a href="#">SERVICES</a></li>
                     <li><a href="about-us.html">About US</a></li>
-                    <li><a href="index.html#project">Projects</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="news%20and%20updates.html">NEW &amp; UPDATES</a></li>
                     <li><a href="index.html#contact">CONTACT</a></li>
                   </ul>
